# peekl

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: main.yml  release.yml
peekl/: __main__.py  database.py  helpers.py  models.py  pollers.py  worker.py
peekl/alertmanager/: __init__.py  discord.py  slack.py
peekl/alertmanager/templates/discord/: discord_cert.j2  discord_http.j2  discord_ok.j2
peekl/alertmanager/templates/slack/: slack_cert.j2  slack_http.j2  slack_ok.j2
