[tool.poetry]
name = "peekl"
version = "1.0.1"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
    { include = "peekl" }
]

[tool.poetry.scripts]
peekl = "peekl.__main__:main"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
requests = "^2.28.1"
PyYAML = "^6.0"
dacite = "^1.6.0"
redis = "^4.3.4"
click = "^8.1.3"
loguru = "^0.6.0"
Jinja2 = "^3.1.2"


[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"
black = "^22.10.0"
isort = "^5.10.1"
pytype = "^2022.10.26"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79